Simplified type casting syntax

--- a/main.ipynb
+++ b/main.ipynb
@@ -87,13 +87,13 @@
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>local_population</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
        "            <td>demographics</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>location</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>local_population</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>services</td>\n",
@@ -105,9 +105,9 @@
        "</table>"
       ],
       "text/plain": [
-       "[('local_population',),\n",
-       " ('demographics',),\n",
+       "[('demographics',),\n",
        " ('location',),\n",
+       " ('local_population',),\n",
        " ('services',),\n",
        " ('status',)]"
       ]
@@ -179,7 +179,7 @@
        "            <td>90022</td>\n",
        "            <td>34.02381, -118.156582</td>\n",
        "            <td>34.02381</td>\n",
-       "            <td>-118.156582</td>\n",
+       "            <td>-118.156586</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>FCCECI8494</td>\n",
@@ -190,8 +190,8 @@
        "            <td>Los Angeles</td>\n",
        "            <td>90063</td>\n",
        "            <td>34.044271, -118.185237</td>\n",
-       "            <td>34.044271</td>\n",
-       "            <td>-118.185237</td>\n",
+       "            <td>34.04427</td>\n",
+       "            <td>-118.185234</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>HEHUQY7254</td>\n",
@@ -203,7 +203,7 @@
        "            <td>90065</td>\n",
        "            <td>34.108833, -118.229715</td>\n",
        "            <td>34.108833</td>\n",
-       "            <td>-118.229715</td>\n",
+       "            <td>-118.22971</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>WIUHRF2613</td>\n",
@@ -214,8 +214,8 @@
        "            <td>Inglewood</td>\n",
        "            <td>90303</td>\n",
        "            <td>33.936291, -118.332639</td>\n",
-       "            <td>33.936291</td>\n",
-       "            <td>-118.332639</td>\n",
+       "            <td>33.93629</td>\n",
+       "            <td>-118.33264</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>CFEZBF4415</td>\n",
@@ -226,18 +226,18 @@
        "            <td>Whittier</td>\n",
        "            <td>90602</td>\n",
        "            <td>33.972119, -118.020188</td>\n",
-       "            <td>33.972119</td>\n",
-       "            <td>-118.020188</td>\n",
+       "            <td>33.97212</td>\n",
+       "            <td>-118.02019</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('OXCZEW7397', '8779-QRDMV', 1, 'United States', 'California', 'Los Angeles', 90022, '34.02381, -118.156582', 34.02381, -118.156582),\n",
-       " ('FCCECI8494', '7495-OOKFY', 1, 'United States', 'California', 'Los Angeles', 90063, '34.044271, -118.185237', 34.044271, -118.185237),\n",
-       " ('HEHUQY7254', '1658-BYGOY', 1, 'United States', 'California', 'Los Angeles', 90065, '34.108833, -118.229715', 34.108833, -118.229715),\n",
-       " ('WIUHRF2613', '4598-XLKNJ', 1, 'United States', 'California', 'Inglewood', 90303, '33.936291, -118.332639', 33.936291, -118.332639),\n",
-       " ('CFEZBF4415', '4846-WHAFZ', 1, 'United States', 'California', 'Whittier', 90602, '33.972119, -118.020188', 33.972119, -118.020188)]"
+       "[('OXCZEW7397', '8779-QRDMV', 1, 'United States', 'California', 'Los Angeles', '90022', '34.02381, -118.156582', 34.02381, -118.156586),\n",
+       " ('FCCECI8494', '7495-OOKFY', 1, 'United States', 'California', 'Los Angeles', '90063', '34.044271, -118.185237', 34.04427, -118.185234),\n",
+       " ('HEHUQY7254', '1658-BYGOY', 1, 'United States', 'California', 'Los Angeles', '90065', '34.108833, -118.229715', 34.108833, -118.22971),\n",
+       " ('WIUHRF2613', '4598-XLKNJ', 1, 'United States', 'California', 'Inglewood', '90303', '33.936291, -118.332639', 33.93629, -118.33264),\n",
+       " ('CFEZBF4415', '4846-WHAFZ', 1, 'United States', 'California', 'Whittier', '90602', '33.972119, -118.020188', 33.97212, -118.02019)]"
       ]
      },
      "execution_count": 5,
@@ -709,7 +709,7 @@
        "            <th>customer_status</th>\n",
        "            <th>churn_label</th>\n",
        "            <th>churn_value</th>\n",
-       "            <th>church_score</th>\n",
+       "            <th>churn_score</th>\n",
        "            <th>cltv</th>\n",
        "            <th>churn_category</th>\n",
        "            <th>churn_reason</th>\n",
@@ -876,11 +876,11 @@
        "</table>"
       ],
       "text/plain": [
-       "[(1, 90001, 54492),\n",
-       " (2, 90002, 44586),\n",
-       " (3, 90003, 58198),\n",
-       " (4, 90004, 67852),\n",
-       " (5, 90005, 43019)]"
+       "[(1, '90001', 54492),\n",
+       " (2, '90002', 44586),\n",
+       " (3, '90003', 58198),\n",
+       " (4, '90004', 67852),\n",
+       " (5, '90005', 43019)]"
       ]
      },
      "execution_count": 9,
@@ -1078,15 +1078,15 @@
        "    <tbody>\n",
        "        <tr>\n",
        "            <td>Male</td>\n",
-       "            <td>46.0</td>\n",
+       "            <td>46</td>\n",
        "            <td>No</td>\n",
-       "            <td>0.0</td>\n",
+       "            <td>0</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('Male', 46.0, 'No', 0.0)]"
+       "[('Male', Decimal('46'), 'No', Decimal('0'))]"
       ]
      },
      "execution_count": 11,
@@ -1105,7 +1105,7 @@
     "    LIMIT 1\n",
     "),\n",
     "ageTable AS (\n",
-    "    SELECT PERCENTILE_CONT(0.5) WITHIN GROUP (ORDER BY age) AS median\n",
+    "    SELECT (PERCENTILE_CONT(0.5) WITHIN GROUP (ORDER BY age))::numeric AS median\n",
     "    FROM demographics\n",
     "),\n",
     "marriedTable AS (\n",
@@ -1117,7 +1117,7 @@
     "    LIMIT 1\n",
     "),\n",
     "dependentsTable AS (\n",
-    "    SELECT PERCENTILE_CONT(0.5) WITHIN GROUP (ORDER BY n_dependents) AS median\n",
+    "    SELECT (PERCENTILE_CONT(0.5) WITHIN GROUP (ORDER BY n_dependents))::numeric AS median\n",
     "    FROM demographics\n",
     ")\n",
     "SELECT \n",
@@ -1240,7 +1240,7 @@
        "            <th>min</th>\n",
        "            <th>q25</th>\n",
        "            <th>median</th>\n",
-       "            <th>avg</th>\n",
+       "            <th>round</th>\n",
        "            <th>q75</th>\n",
        "            <th>max</th>\n",
        "        </tr>\n",
@@ -1251,7 +1251,7 @@
        "            <td>1</td>\n",
        "            <td>15.0</td>\n",
        "            <td>38.0</td>\n",
-       "            <td>37.5912253575570158</td>\n",
+       "            <td>37.59</td>\n",
        "            <td>61.0</td>\n",
        "            <td>72</td>\n",
        "        </tr>\n",
@@ -1260,7 +1260,7 @@
        "            <td>1</td>\n",
        "            <td>2.0</td>\n",
        "            <td>10.0</td>\n",
-       "            <td>17.9791332263242376</td>\n",
+       "            <td>17.98</td>\n",
        "            <td>29.0</td>\n",
        "            <td>72</td>\n",
        "        </tr>\n",
@@ -1268,8 +1268,8 @@
        "</table>"
       ],
       "text/plain": [
-       "[(False, 1, 15.0, 38.0, Decimal('37.5912253575570158'), 61.0, 72),\n",
-       " (True, 1, 2.0, 10.0, Decimal('17.9791332263242376'), 29.0, 72)]"
+       "[(False, 1, 15.0, 38.0, Decimal('37.59'), 61.0, 72),\n",
+       " (True, 1, 2.0, 10.0, Decimal('17.98'), 29.0, 72)]"
       ]
      },
      "execution_count": 14,
@@ -1285,7 +1285,7 @@
     "          ORDER BY months_tenure) AS q25,\n",
     "       PERCENTILE_CONT(0.5) WITHIN GROUP (\n",
     "          ORDER BY months_tenure) AS median,\n",
-    "       AVG(months_tenure),\n",
+    "       ROUND(AVG(months_tenure::numeric), 2),\n",
     "       PERCENTILE_CONT(0.75) WITHIN GROUP (\n",
     "          ORDER BY months_tenure) AS q75,\n",
     "       MAX(months_tenure)\n",
@@ -1350,7 +1350,7 @@
     "%%sql\n",
     "SELECT ROUND((SELECT COUNT(*)\n",
     "              FROM status\n",
-    "              WHERE churn_value = True) / CAST(COUNT(*) AS numeric) * 100, 2) AS percentage_churned,\n",
+    "              WHERE churn_value = True)::numeric / COUNT(*) * 100, 2) AS percentage_churned,\n",
     "       (SELECT COUNT(*)\n",
     "              FROM status\n",
     "              WHERE churn_value = True) AS number_churned\n",
@@ -1609,8 +1609,8 @@
    "source": [
     "%%sql\n",
     "SELECT churn_value AS churned,\n",
-    "       ROUND(CAST(AVG(monthly_charge) AS numeric), 2) AS montly_charge,\n",
-    "       ROUND(CAST(STDDEV(monthly_charge) AS numeric), 2) AS montly_charge_sd\n",
+    "       ROUND(AVG(monthly_charge::numeric), 2) AS montly_charge,\n",
+    "       ROUND(STDDEV(monthly_charge::numeric), 2) AS montly_charge_sd\n",
     "FROM status LEFT JOIN services ON status.customer_id = services.customer_id\n",
     "GROUP BY churn_value"
    ]
@@ -1646,8 +1646,8 @@
    "source": [
     "%%sql churn_count_charge <<\n",
     "SELECT churn_value, offer,\n",
-    "       COUNT(offer), ROUND(CAST(AVG(monthly_charge) AS numeric), 2) AS avg_monthly_charge,\n",
-    "       ROUND(CAST(STDDEV(monthly_charge) AS numeric), 2) AS montly_charge_sd\n",
+    "       COUNT(offer), ROUND(AVG(monthly_charge::numeric), 2) AS avg_monthly_charge,\n",
+    "       ROUND(STDDEV(monthly_charge::numeric), 2) AS montly_charge_sd\n",
     "FROM status LEFT JOIN services ON status.customer_id = services.customer_id\n",
     "GROUP BY churn_value, offer\n",
     "ORDER BY churn_value, offer"
@@ -2877,7 +2877,7 @@
    "source": [
     "%%sql\n",
     "SELECT churn_category,\n",
-    "       ROUND(COUNT(*) / CAST((SELECT COUNT(*) FROM status WHERE churn_value = True) AS numeric), 2) AS percentage_of_churned\n",
+    "       ROUND(COUNT(*)::numeric / (SELECT COUNT(*) FROM status WHERE churn_value = True), 2) AS percentage_of_churned\n",
     "FROM status\n",
     "WHERE churn_value = True\n",
     "GROUP BY churn_category"
@@ -3039,9 +3039,9 @@
    "source": [
     "%%sql\n",
     "SELECT churn_value AS \"Churned\",\n",
-    "       ROUND(CAST(PERCENTILE_CONT(0.5) WITHIN GROUP (ORDER BY total_extra_data_charges) AS numeric), 2) AS \"Extra Data Charge\",\n",
-    "       ROUND(CAST(PERCENTILE_CONT(0.5) WITHIN GROUP (ORDER BY total_long_dist_charges) AS numeric), 2) AS \"Long Distance Charges\",\n",
-    "       ROUND(CAST(PERCENTILE_CONT(0.5) WITHIN GROUP (ORDER BY total_refunds) AS numeric), 2) AS \"Total Refunds\"\n",
+    "       ROUND((PERCENTILE_CONT(0.5) WITHIN GROUP (ORDER BY total_extra_data_charges))::numeric, 2) AS \"Extra Data Charge\",\n",
+    "       ROUND((PERCENTILE_CONT(0.5) WITHIN GROUP (ORDER BY total_long_dist_charges))::numeric, 2) AS \"Long Distance Charges\",\n",
+    "       ROUND((PERCENTILE_CONT(0.5) WITHIN GROUP (ORDER BY total_refunds))::numeric, 2) AS \"Total Refunds\"\n",
     "FROM status LEFT JOIN services ON status.customer_id = services.customer_id\n",
     "GROUP BY churn_value"
    ]
@@ -3181,8 +3181,8 @@
     "%%sql\n",
     "SELECT churn_value,\n",
     "       COUNT(*),\n",
-    "       ROUND(CAST(AVG(age) AS numeric), 2) AS average_age,\n",
-    "       ROUND(CAST(STDDEV(age) AS numeric), 2) AS sd\n",
+    "       ROUND(AVG(age::numeric), 2) AS average_age,\n",
+    "       ROUND(STDDEV(age::numeric), 2) AS sd\n",
     "FROM status LEFT JOIN demographics ON status.customer_id = demographics.customer_id\n",
     "GROUP BY churn_value"
    ]
@@ -3464,7 +3464,7 @@
    "source": [
     "%%sql\n",
     "SELECT city,\n",
-    "       ROUND(CAST(1.0 * COUNT(*) / (SELECT COUNT(*) FROM status WHERE churn_value = True) AS numeric), 2) AS churn_rate\n",
+    "       ROUND(COUNT(*)::numeric / (SELECT COUNT(*) FROM status WHERE churn_value = True), 2) AS churn_rate\n",
     "FROM status\n",
     "     LEFT JOIN location ON status.customer_id = location.customer_id\n",
     "WHERE churn_value = True\n",
@@ -3541,7 +3541,7 @@
    "source": [
     "%%sql\n",
     "SELECT city,\n",
-    "       ROUND(CAST(1.0 * COUNT(*) / (SELECT COUNT(*) FROM status WHERE churn_value = True) / population AS numeric), 6) AS churn_rate\n",
+    "       ROUND((COUNT(*)::numeric / (SELECT COUNT(*) FROM status WHERE churn_value = True) / population), 6) AS churn_rate\n",
     "FROM status\n",
     "     LEFT JOIN location ON status.customer_id = location.customer_id\n",
     "     LEFT JOIN local_population ON location.zip_code = local_population.zip_code\n",
